# dbf_reader

./: Cargo.toml  README.md
src/: de.rs  error.rs  lib.rs
src/de/: cell.rs  document.rs  record.rs
src/de/cell/: deser.rs
src/de/document/: bytes_iter.rs  iter_lend.rs  record_iter.rs
src/de/record/: cell_peek.rs  deser.rs
